repair itemshop on mobile and tablets

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -174,8 +174,11 @@ a:active {
 }
 
 .shop-image {
-    width: 250px;
-    height: 250px;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 90% auto;
 }
 
 .shop-item {
